; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/levinson/keymaps/jyh2/extr_keymap.c_make_it_pink_blue.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/keebio/levinson/keymaps/jyh2/extr_keymap.c_make_it_pink_blue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @make_it_pink_blue() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i64 210, i64* %1, align 8
  store i64 315, i64* %2, align 8
  %6 = call i64 (...) @rgblight_get_hue()
  store i64 %6, i64* %3, align 8
  %7 = call i32 (...) @rgblight_get_sat()
  store i32 %7, i32* %4, align 4
  %8 = call i32 (...) @rgblight_get_val()
  store i32 %8, i32* %5, align 4
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* %1, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %0
  %13 = load i64, i64* %1, align 8
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @rgblight_sethsv(i64 %13, i32 %14, i32 %15)
  br label %22

17:                                               ; preds = %0
  %18 = load i64, i64* %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @rgblight_sethsv(i64 %18, i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %17, %12
  ret void
}

declare dso_local i64 @rgblight_get_hue(...) #1

declare dso_local i32 @rgblight_get_sat(...) #1

declare dso_local i32 @rgblight_get_val(...) #1

declare dso_local i32 @rgblight_sethsv(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
